--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,19 @@
-<html>
+<html ng-app="facilitate">
   <head>
     <link rel="stylesheet" href="css/main.css" />
-    <script src="vendor/react.js"></script>
-    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>
-    <script src="vendor/jquery.js"></script>
 
-    <script type="text/jsx" src="components/navigation.js"></script>
+    <!-- htmlbuild:js -->
+    <!-- endbuild -->
+
   </head>
   <body>
-    <div id="navigation"></div>
 
-    <script type="text/jsx">
-      React.render(
-        <Navigation />,
-        document.getElementById('navigation')
-      );
-    </script>
+    <div fa-navigation></div>
+
+    <div class="container">
+      <div ng-view></div>
+    </div>
+
+
   </body>
 </html>
